# jsol

./: .gitignore  Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
crates/context/: Cargo.toml
crates/context/src/: context.rs  lib.rs
crates/context/src/ir/: mod.rs  op.rs
crates/interpret/: Cargo.toml
crates/ir/: Cargo.toml
crates/ir/src/: lib.rs  module.rs  ops.rs
crates/link/: Cargo.toml
crates/parse/: Cargo.toml
crates/parse/src/: constant.rs  lib.rs
crates/value/: Cargo.toml
crates/value/src/: lib.rs  number.rs  ty.rs
programs/: script.json
src/: main.rs
