lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "jsol"
rust-version.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = { version = "0.6", features = ["capture-spantrace"] }
jsol-ir = { path = "crates/ir" }
jsol-parse = { path = "crates/parse" }
serde_json = "1.0.140"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[workspace]
members = ["crates/interpret", "crates/ir", "crates/parse"]
resolver = "3"

[workspace.dependencies]
serde = "1"

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"

[workspace.lints.clippy]
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_ptr_alignment = "allow"
cast_sign_loss = "allow"
cognitive_complexity = "allow"
disallowed_methods = "deny"
float_cmp = "allow"
fn_params_excessive_bools = "allow"
inline_always = "allow"
large_stack_arrays = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
nursery = { level = "warn", priority = -1 }
option_if_let_else = "allow"
pedantic = { level = "warn", priority = -1 }
range_plus_one = "allow"
redundant_pub_crate = "allow"
redundant_type_annotations = "warn"
significant_drop_tightening = "allow"
similar_names = "allow"
str_to_string = "deny"
struct_excessive_bools = "allow"
style = { level = "warn", priority = -1 }
todo = "warn"
try_err = "warn"
tuple_array_conversions = "allow"
undocumented_unsafe_blocks = "allow"
unimplemented = "allow"
unnecessary_min_or_max = "allow"
unnecessary_wraps = "allow"
unsafe_derive_deserialize = "allow"
used_underscore_binding = "allow"
useless_conversion = "allow"

[workspace.package]
edition = "2024"
license = "MIT or Apache-2.0"
rust-version = "1.85"
version = "0.1.0"

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
panic = "abort"

[workspace.metadata.docs.rs]
all-features = true
